--- a/fe/src/routes/Login.css
+++ b/fe/src/routes/Login.css
@@ -1,4 +1,22 @@
 #login-message {
     font-size: 2rem;
     color: darkblue;
+    width: 50%;
+    display: block;
+    border: 1px solid black;
+    text-align: center;
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+
+form input, form label {
+    display: block;
+}
+
+form {
+    border: 1px solid purple;
+    display: inline-block;
+}
+
