--- a/fe/src/routes/Login.css
+++ b/fe/src/routes/Login.css
@@ -3,20 +3,19 @@ body, html {
     padding: 0;
     height: 100%;
 }
-  
-  
-/* Center the login form vertically and horizontally */
+
+
 .login-container {
 max-width: 300px;
 margin: 0 auto;
-margin-top: 100px; /* Adjust this margin for vertical centering */
+margin-top: 100px;
 padding: 20px;
 border: 1px solid #ccc;
 border-radius: 5px;
 background: #f9f9f9;
 text-align: center;
 }
-  
+
 input {
 width: 90%;
 padding: 10px;
@@ -36,3 +35,13 @@ cursor: pointer;
 button:hover {
 background: #0056b3;
 }
+
+.tooltip {
+    background-color: #f2f2f2;
+    color: #000;
+    padding: 5px;
+    border-radius: 3px;
+    font-size: 12px;
+    margin-top: 5px;
+    text-align: center;
+  }
