--- a/fe/src/routes/Login.css
+++ b/fe/src/routes/Login.css
@@ -2,6 +2,7 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
+    color: blue;
 }
 
 
@@ -10,14 +11,14 @@ max-width: 500px;
 margin: 0 auto;
 margin-top: 100px;
 padding: 20px;
-border: 1px solid #ccc;
+border: 1px solid #000;
 text-align: center;
 }
 
 input {
 width: 90%;
 padding: 10px;
-margin: 10px 0;
+margin: 5px 0;
 }
 
 button {
@@ -28,6 +29,7 @@ color: #fff;
 border: none;
 border-radius: 5px;
 cursor: pointer;
+margin: 5px;
 }
 
 button:hover {
